# card-qrcode

./: AUTHORS  README.md  configure.ac  makefile.am  release.sh
businesscard-qrcode/: README.md  autogen.sh  businesscard-qrcode.cls  configure.ac  screenshots.sh
businesscard-qrcode/examples/: example.tex  john-doe-hongkong.tex  makefile.am  peter-muster-example-company-zuerich.tex  texstudio_d30266.tex
businesscard-qrcode/screenshots/: makefile.am
examples/: special-papersize.tex
screenshots/: makefile.am
